[project]
name = "background"
version = "0.1.0"
description = ""
authors = [{ name = "Bahador Rousta", email = "bahador.jorshary@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "pyqt6 (>=6.10.1,<7.0.0)",
    "pybaselines (>=1.2.1,<2.0.0)",
    "pyqtgraph (>=0.14.0,<0.15.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = ["commitizen (>=4.11.0,<5.0.0)"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
